[package]
name = "game_of_deth"
version = "0.1.0"
authors = ["magu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enabling Link Time Optimization
codegen-units = 1   # Reducing Parallel Code Generation Units
panic = 'abort'

[dependencies]
ggez = "0.6"
rand = "0.7"
glam = { version = "0.18.0", features = ["mint"] }